# hypothesis-mcp

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.claude/commands/: install-hypothesis-mcp.md
.github/workflows/: publish.yml
src/hypothesis_mcp/: client.py  context.py  server.py
src/hypothesis_mcp/pdf/: extractor.py  fetcher.py
src/hypothesis_mcp/tools/: annotations.py  groups.py  pdf_discovery.py  pdf_reader.py  profile.py
